# SpaceDyn

./: Cxyz.py  Get_global_value.py  Global_Value.py  README.md  Set_global_value.py  aw.py  calc_aa.py  calc_acc.py  calc_hh.py  calc_je.py  calc_jr.py  calc_jre.py  calc_jt.py  calc_jte.py  calc_pos.py  calc_vel.py  cross.py  eul2dc.py  f_dyn.py  f_dyn_rk.py  f_dyn_rk2.py  f_kin_e.py  f_kin_j.py  j_num.py  main.py  r_ne.py  rpy2dc.py  skew_sym.py
src/C++/: Readme  Readme1  main_test.cpp  makefile
src/C++/spd/: Makefile
src/C++/spd/include/: common.h  define.h  model.h  rot_a.h  spd.h  spn.h
src/C++/spd/lib/: libspd.lib
src/C++/spd/lib/old_ver/: libspd.lib
src/C++/spd/matrix/: test.c  test.cpp  test_gsl.cpp  vector.cpp
src/C++/spd/model_sample/: DEOS.def
src/C++/spd/spn/: main.cpp  rot.cpp  spn.cpp
src/C++/spd/src/: aw.cpp  calc_C.cpp  calc_CLC.cpp  calc_CLC2.cpp  calc_GJb.cpp  calc_GJe.cpp  calc_GJe_r.cpp  calc_JJ.cpp  calc_Jb.cpp  calc_Je.cpp  calc_Lg.cpp  calc_Rg.cpp  calc_SP.cpp  calc_SPN.cpp  calc_SS.cpp  calc_Xup_I.cpp  calc_hh.cpp  ch_conf.cpp  dat_consistency.cpp  f_dyn.cpp  f_dyn_CL.cpp  f_dyn_ffg.cpp  f_dyn_fix.cpp  f_dyn_rk.cpp  f_dyn_rk1.cpp  f_dyn_rk_ffg.cpp  f_kin_e.cpp  f_kin_j.cpp  gravity.cpp  i_dyn.cpp  i_dyn_CL.cpp  i_dyn_fix.cpp  i_dyn_t.cpp  inner_force.cpp  int_eu.cpp  j_num.cpp  makefile_model  model.cpp  model_05_02_09.cpp  model_CL.cpp  (+7 more)
src/C++/spd/src/CVS/: Entries  Repository  Root
src/matlab/spacedyn_reference/: aw.html  aw_e.html  calc_aa.html  calc_aa_e.html  calc_acc.html  calc_acc_e.html  calc_gj.html  calc_gj_e.html  calc_hh.html  calc_hh_e.html  calc_je.html  calc_je_e.html  calc_jr.html  calc_jr_e.html  calc_jre.html  calc_jre_e.html  calc_jt.html  calc_jt_e.html  calc_jte.html  calc_jte_e.html  calc_pos.html  calc_pos_e.html  calc_vel.html  calc_vel_e.html  cross.html  cross_e.html  cxyz.html  cxyz_e.html  dc2eul.html  dc2eul_e.html  dc2qtn.html  dc2qtn_e.html  dc2rpy.html  dc2rpy_e.html  diff.html  diff_e.html  eul2dc.html  eul2dc_e.html  f_dyn.html  f_dyn_e.html  (+38 more)
src/matlab/spacedyn_v2r0/: calc_acc.m  calc_je.m  calc_jr.m  calc_jre.m  calc_pos.m  cx.m  cy.m  dc2qtn.m  dc2rpy.m  f_dyn_rk.m  f_dyn_rk2.m  f_kin_j.m  init_SV.m  int_sr2.m  j_num.m  r_ne.m  rpy2dc.m  tr2diff.m
src/matlab/spacedyn_v2r1/: aw.m  calc_aa.m  calc_gj.m  calc_gj11.m  calc_hh.m  calc_jt.m  calc_jte.m  calc_vel.m  cross.m  cz.m  dc2eul.m  dc2qtn.m  eul2dc.m  f_dyn.m  f_dyn_f0.m  f_kin_e.m  i_kine.m  int_eu.m  int_eu2.m  int_sr.m  qtn2dc.m  tilde.m  w2dQtn.m
src/ros2/space_dyn/: CMakeLists.txt  package.xml
src/ros2/space_dyn/src/include/: rot.h  spd_m.h  spd_o.h  vModel.h
src/ros2/space_dyn/src/matrix/: Makefile  matrix.cpp  matrix.h  matrix_Boost.cpp  vector.h
src/ros2/space_dyn/src/model_sample/: JustinS.def  TECSAS.def
src/ros2/space_dyn/src/spn/: makefile
